# qml4qwidgets

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  helloworld.qml  helloworld.ui  main.qml  main.ui
lib/: CMakeLists.txt  controller.h  messageboxapi.cpp  messageboxapi.h  qml4qwidgets.cpp  qml4qwidgets.h  widgetcontroller.cpp  widgetcontroller.h
lib/qml4qwidgets/: qml4qwidgets.cpp  qml4qwidgets.defs.h  qml4qwidgets.h  widgetfactory.cpp  widgetfactory.h
lib/qml4qwidgets/api/: controller.cpp  controller.h  messageboxapi.h  widgetcontroller.cpp  widgetcontroller.h
runner/: CMakeLists.txt  factory.cpp  factory.h  main.cpp  quark.qrc  runner.cpp  runner.h
